<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- HR row -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_heartrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_hr"
            android:focusable="false"
            android:text="@string/get_heartrate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_heartrateField"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_heartrateHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/units_heartrate"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_heartrateConfidence"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_heartrateCHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitHRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:text="@string/units_Confidence"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>
    <!-- RR row -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/button_get_respiratoryrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_rr"
            android:focusable="false"
            android:text="@string/get_respiratoryrate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_respiratoryrateField"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_respiratoryrateHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitRR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/units_respiratoryrate"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_respiratoryrateConfidence"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_respiratoryrateCHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitRRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingRight="20dp"
                android:text="@string/units_Confidence"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <!-- temperature row -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_temp"
            android:focusable="false"
            android:text="@string/get_temperature" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_temperatureField"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_temperatureHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitTEMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/units_temperature"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_temperatureConfidence"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_temperatureCHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitTEMPC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:paddingRight="20dp"
                android:text="@string/units_Confidence"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <!-- Spo2 row -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_oxygensaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_spo2"
            android:focusable="false"
            android:text="@string/get_oxygensaturation" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_oxygensaturationField"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_oxygensaturationHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitSPO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/units_oxygensaturation"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_oxygensaturationConfidence"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="15"
                android:hint="@string/editText_oxygensaturationCHint"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/unitSPO2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/units_Confidence"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_pulseoximetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/vs_spo2"
            android:focusable="false"
            android:text="@string/get_pulseoximetry" />
    </LinearLayout>

</LinearLayout>